force-app/main/default/objects/OSA50_Questionnaire__c/OSA50_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>OSA50_Questionnaire</label>
    <nameField>
        <label>OSA50_Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSA50_Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>