force-app/main/default/objects/OSA50_Questionnaire__c/fields/Apnoeas__c.field-meta.xml
<CustomField>
    <fullName>Apnoeas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apnoeas</label>
    <type>Checkbox</type>
</CustomField>