force-app/main/default/objects/OSA50_Questionnaire__c/fields/Obesity__c.field-meta.xml
<CustomField>
    <fullName>Obesity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obesity</label>
    <type>Checkbox</type>
</CustomField>