force-app/main/default/objects/OSA50_Questionnaire__c/fields/Over_50__c.field-meta.xml
<CustomField>
    <fullName>Over_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over 50</label>
    <type>Checkbox</type>
</CustomField>