force-app/main/default/objects/OSA50_Questionnaire__c/fields/Sleep_Referral__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sleep Referral</label>
    <referenceTo>Sleep_Referral__c</referenceTo>
    <relationshipLabel>OSA50_Questionnaires</relationshipLabel>
    <relationshipName>OSA50_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>