force-app/main/default/objects/OSA50_Questionnaire__c/fields/Snoring__c.field-meta.xml
<CustomField>
    <fullName>Snoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snoring</label>
    <type>Checkbox</type>
</CustomField>